--- a/SportStore/SportStore.WebUI/Web.config
+++ b/SportStore/SportStore.WebUI/Web.config
@@ -24,6 +24,7 @@
 	<appSettings/>
 	<connectionStrings>
 		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
+    <add name="AppDb" connectionString="Server=.\SQLEXPRESS2005;Database=SportStore;Trusted_Connection=yes;"/>
 	</connectionStrings>
 	<system.web>
 		<!-- 
