started to add paging links

--- a/SportStore/SportStore.WebUI/Web.config
+++ b/SportStore/SportStore.WebUI/Web.config
@@ -96,6 +96,7 @@
 				<add namespace="System.Web.Routing"/>
 				<add namespace="System.Linq"/>
 				<add namespace="System.Collections.Generic"/>
+        <add namespace="SportStore.WebUI.HtmlHelpers"/>
 			</namespaces>
 		</pages>
 		<httpHandlers>
