--- a/SportStore/SportStore.UnitTests/SportStore.UnitTests.csproj
+++ b/SportStore/SportStore.UnitTests/SportStore.UnitTests.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CatalogBrowsing.cs" />
+    <Compile Include="DisplayPagingLinks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestHelpers.cs" />
   </ItemGroup>
