--- a/SportStore/SportStore.UnitTests/SportStore.UnitTests.csproj
+++ b/SportStore/SportStore.UnitTests/SportStore.UnitTests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="CatalogBrowsing.cs" />
     <Compile Include="DisplayPagingLinks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShoppingCart.cs" />
     <Compile Include="UnitTestHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
