finished adding basic cart

--- a/SportStore/SportStore.WebUI/SportStore.WebUI.csproj
+++ b/SportStore/SportStore.WebUI/SportStore.WebUI.csproj
@@ -71,6 +71,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HtmlHelpers\PagingHelpers.cs" />
+    <Compile Include="Infrastructure\CartModelBinder.cs" />
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
     <Compile Include="Models\CartViewModel.cs" />
     <Compile Include="Models\CategoryLink.cs" />
