--- a/SportStore/SportStore.Domain/SportStore.Domain.csproj
+++ b/SportStore/SportStore.Domain/SportStore.Domain.csproj
@@ -32,6 +32,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -48,10 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IOrderProcessor.cs" />
     <Compile Include="Abstract\IProductsRepository.cs" />
+    <Compile Include="Concrete\FakeOrderProcessor.cs" />
     <Compile Include="Concrete\FakeProductsRepository.cs" />
     <Compile Include="Concrete\SqlProductsRepository.cs" />
     <Compile Include="Entities\Cart.cs" />
+    <Compile Include="Entities\DeliveryDetails.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
