--- a/SportStore/SportStore.WebUI/Web.config
+++ b/SportStore/SportStore.WebUI/Web.config
@@ -24,8 +24,8 @@
 	<appSettings/>
 	<connectionStrings>
 		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-    <!--add name="AppDb" connectionString="Server=.\SQLEXPRESS2005;Database=SportStore;Trusted_Connection=yes;"/-->
-    <add name="AppDb" connectionString="Server=.\SQLEXPRESS;Database=SportStore;Trusted_Connection=yes;"/>
+    <add name="AppDb" connectionString="Server=.\SQLEXPRESS2005;Database=SportStore;Trusted_Connection=yes;"/>
+    <!--add name="AppDb" connectionString="Server=.\SQLEXPRESS;Database=SportStore;Trusted_Connection=yes;"/-->
 	</connectionStrings>
 	<system.web>
 		<!-- 
@@ -34,6 +34,18 @@
             affects performance, set this value to true only 
             during development.
     -->
+    <caching>
+      <outputCacheSettings>
+        <outputCacheProfiles>
+          <clear/>
+
+          <add name="ProductList"
+               varyByParam="*"
+               duration="10"
+               location="ServerAndClient"/>
+        </outputCacheProfiles>
+      </outputCacheSettings>
+    </caching>
 		<compilation debug="true">
 			<assemblies>
 				<add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
@@ -102,6 +114,7 @@
 				<add namespace="System.Linq"/>
 				<add namespace="System.Collections.Generic"/>
         <add namespace="SportStore.WebUI.HtmlHelpers"/>
+        <add namespace="SportStore.WebUI.UrlHelpers"/>
 			</namespaces>
 		</pages>
 		<httpHandlers>
